<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calculadora"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal"
    android:rowCount="4">

    <Button
        android:id="@+id/calcDiv"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcDiv" />

    <Button
        android:id="@+id/calc1"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc1" />

    <Button
        android:id="@+id/calc2"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc2" />

    <Button
        android:id="@+id/calc3"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc3" />

    <Button
        android:id="@+id/calcMult"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/calcMult" />

    <Button
        android:id="@+id/calc4"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc4" />

    <Button
        android:id="@+id/calc5"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc5" />

    <Button
        android:id="@+id/calc6"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc6" />

    <Button
        android:id="@+id/calcMenos"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/calcMenos" />

    <Button
        android:id="@+id/calc7"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc7" />

    <Button
        android:id="@+id/calc8"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc8" />

    <Button
        android:id="@+id/calc9"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc9" />

    <Button
        android:id="@+id/calcMas"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/calcMas" />

    <Button
        android:id="@+id/calc0"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc0" />

    <Button
        android:id="@+id/calc00"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc00" />

    <Button
        android:id="@+id/calcRes"
        style="@style/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcRes" />
</GridLayout>